kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/name: devops-portfolio
    app.kubernetes.io/part-of: portfolio-system
